[project]
dependencies = [
  "streamlit>=1.50.0",
  "pandas>=2.0.0",
  "plotly>=5.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.13.0",
  "protobuf>=4.21.0",
  "logly>=0.1.6",
]
description = "Журнал запасных частей - система учета срока службы запчастей и планирования их замен"
name = "gpmech"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
